--- a/examples/index.html
+++ b/examples/index.html
@@ -35,6 +35,7 @@
 			<li><a href="word-count.html" target="_blank">word-count.html</a> (统计字数)</li>
 			<li><a href="filter-mode.html" target="_blank">filter-mode.html</a> (HTML过滤)</li>
 			<li><a href="url-type.html" target="_blank">url-type.html</a> (URL设置)</li>
+			<li><a href="paste-type.html" target="_blank">paste-type.html</a> (粘贴设置)</li>
 			<li><a href="custom-theme.html" target="_blank">custom-theme.html</a> (自定义风格)</li>
 			<li><a href="custom-plugin.html" target="_blank">custom-plugin.html</a> (自定义插件)</li>
 		</ol>
