[trunk] bugfix: issue #264

--- a/test/main.html
+++ b/test/main.html
@@ -209,7 +209,8 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 			</textarea></p>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;">
-<div style="display:inline-block;"></div>123<div></div><div></div>
+<p>1234567890</p>
+<p>abcdefgh</p>
 </textarea>
 			<br />
 			<select id="uploadFile">
