--- a/test/total.html
+++ b/test/total.html
@@ -23,6 +23,7 @@
 		<input type="button" id="remove1" value="Remove #1" />
 		<input type="button" id="remove2" value="Remove #2" />
 		<input type="reset" name="button" value="Reset" />
+		<iframe src="http://www.baidu.com/"></iframe>
 		<script src="../kindeditor.js"></script>
 		<script src="../lang/zh_CN.js"></script>
 		<script src="../lang/en.js"></script>
