[trunk] fixed issue #266

--- a/test/main.html
+++ b/test/main.html
@@ -246,6 +246,7 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 			KindEditor.DEBUG = true;
 			//KindEditor.options.filterMode = true;
 			//document.domain = 'kindsoft.net';
+			KindEditor.basePath = '../';
 			KindEditor.ready(function(K) {
 				var editor1 = K.create('textarea[name=content1]', {
 					basePath : '../',
