[trunk] fixed issue #267: improve cmd.commonNode

--- a/test/main.html
+++ b/test/main.html
@@ -59,6 +59,7 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<p><textarea name="content1" cols="100" rows="20" style="width:800px;height:200px;">
+<span style="color:#E56600;"><span style="background-color:#FFE500;">高</span><span style="background-color:#FFE500;">温</span></span><span style="color:#E56600;"><span style="background-color:#FFE500;">气</span><span style="background-color:#FFE500;"><u><em><strong>体效</strong></em></u></span></span><span style="background-color:#FFE500;">应</span>
 <div style="display:inline-block;"></div>123<div></div><div></div>
 <p style="text-align:left;text-indent:24pt;">
 	<span style="font-size:12pt;font-family:仿宋_GB2312;color:#E56600;">三个基</span><span style="font-family:仿宋_GB2312;font-size:16px;"><span style="color:#E56600;">本</span><span style="color:#E56600;">关系式</span></span> 
