--- a/examples/index.html
+++ b/examples/index.html
@@ -39,6 +39,11 @@
 			<li><a href="custom-theme.html" target="_blank">custom-theme.html</a> (自定义风格)</li>
 			<li><a href="custom-plugin.html" target="_blank">custom-plugin.html</a> (自定义插件)</li>
 		</ol>
+		<h3>使用其它类库</h3>
+		<ol>
+			<li><a href="jquery.html" target="_blank">jquery.html</a> (jQuery)</li>
+			<li><a href="mootools.html" target="_blank">mootools.html</a> (MooTools)</li>
+		</ol>
 		<h3>单独调用组件</h3>
 		<ol>
 			<li><a href="node.html" target="_blank">node.html</a> (Node操作)</li>
