[trunk] fix issue #261

--- a/test/main.html
+++ b/test/main.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>KindEditor Main Test</title>
+		<!-- <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" /> -->
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<link rel="stylesheet" href="../themes/default/default.css" />
 		<link rel="stylesheet" href="../themes/simple/simple.css" />
-		<!-- <link rel="stylesheet" href="../lib/taobao.css" /> -->
 		<style>
 			.selected {
 				padding: 10px;
@@ -17,7 +17,6 @@
 				margin: 10px;
 			}
 		</style>
-		<script charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/mootools/1.4.1/mootools-yui-compressed.js"></script>
 		<script src="../src/core.js"></script>
 		<script src="../src/config.js"></script>
 		<script src="../src/ajax.js"></script>
