--- a/test/main.html
+++ b/test/main.html
@@ -54,7 +54,7 @@
 	</head>
 	<body>
 		<h1 id="type">KindEditor Main Test</h1>
-		<table>
+		<table id="menu">
 		<tr>
 		<td align="center">
 		<form method="post" action="../php/demo.php">
