[trunk] fix issue #270

--- a/test/total.html
+++ b/test/total.html
@@ -23,7 +23,7 @@
 		<input type="button" id="remove1" value="Remove #1" />
 		<input type="button" id="remove2" value="Remove #2" />
 		<input type="reset" name="button" value="Reset" />
-		<iframe src="http://www.kindsoft.net/"></iframe>
+		<!-- <iframe src="http://www.kindsoft.net/"></iframe> -->
 		<script src="../kindeditor.js"></script>
 		<script src="../lang/zh_CN.js"></script>
 		<script src="../lang/en.js"></script>
