[trunk] fix issue #272

--- a/test/main.html
+++ b/test/main.html
@@ -261,9 +261,9 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 					designMode : true,
 					allowFileManager : true,
 					fullscreenMode : false,
-					afterTab : function() {
-						editor2.focus();
-					},
+					//afterTab : function() {
+						//editor2.focus();
+					//},
 					afterChange : function() {
 						//console.log('1');
 					},
