[trunk] fix issue #273

--- a/test/main.html
+++ b/test/main.html
@@ -211,9 +211,8 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 		测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1测试内容1</div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div>
 			</textarea></p>
 			<br />
-			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;">
-<p>
-	<span style="font-family:宋体;"><span style="font-size:18px;font-family:KaiTi_GB2312;">在控制体的左右边界处，两个点涡诱导的速度带来的左右相互抵消；尤其在下游边界处的地方由于速度还是等于来流速度，因此根据动量定理物体不会受到阻力。</span><span style="font-size:18px;font-family:KaiTi_GB2312;"></span><span style="font-size:18px;font-family:KaiTi_GB2312;"></span></span> 
+			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><p>
+	Think Defferent<img src="/ke4/attached/1_192040_1.jpg" width="510" height="340" align="right" alt="" /> 
 </p>
 </textarea>
 			<br />
