show loading effect when upload

--- a/test/main.html
+++ b/test/main.html
@@ -59,7 +59,7 @@
 		<tr>
 		<td align="center">
 		<form method="post" action="../php/demo.php">
-			<p><textarea name="content1" cols="100" rows="20" style="height:10px;">
+			<p><textarea name="content1" cols="100" rows="20" style="width:800px;height:10px;">
 2<a href="/kindeditor/trunk/test/showitem.php?id=94b6a10a-e65e-11e0-9955-f46d04144a99"></a><span style="font-family:宋体;"><span style="font-size:18px;font-family:KaiTi_GB2312;">）在控制体的左右边界处，两个点涡诱导的速度带来的左右相互抵消；尤其在下游边界处的地方由于速度还是等于来<a href="/kindeditor/trunk/test/showitem.php?id=2c5eaf1e-b26d-11e0-b298-f46d04144a99">流速</a>度，因此根据动量定理物体不会受到<a href="/kindeditor/trunk/test/showitem.php?id=94b6a10a-e65e-11e0-9955-f46d04144a99">阻力</a>。</span><span style="font-size:18px;font-family:KaiTi_GB2312;"></span><span style="font-size:18px;font-family:KaiTi_GB2312;"></span></span> 
 <p><br /></p>
 <span style="color:#E56600;"><span style="background-color:#FFE500;">高</span><span style="background-color:#FFE500;">温</span></span><span style="color:#E56600;"><span style="background-color:#FFE500;">气</span><span style="background-color:#FFE500;"><u><em><strong>体效</strong></em></u></span></span><span style="background-color:#FFE500;">应</span>
@@ -257,7 +257,7 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 					pluginsPath : '../plugins/',
 					urlType : 'absolute',
 					themeType : 'simple',
-					allowImageUpload : false,
+					allowImageUpload : true,
 					designMode : true,
 					allowFileManager : true,
 					fullscreenMode : false,
