--- a/examples/uploadbutton.html
+++ b/examples/uploadbutton.html
@@ -30,6 +30,8 @@
 		</script>
 	</head>
 	<body>
-		<input type="text" id="url" value="" readonly="readonly" /> <input type="button" id="uploadButton" value="Upload" />
+		<div class="upload">
+			<input class="ke-input-text" type="text" id="url" value="" readonly="readonly" /> <input type="button" id="uploadButton" value="Upload" />
+		</div>
 	</body>
 </html>
