[trunk] add arabic translation by daif alotaibi (http://daif.net/)

--- a/examples/multi-language.html
+++ b/examples/multi-language.html
@@ -29,13 +29,14 @@
 		</script>
 	</head>
 	<body>
-		<h3>多语言</h3>
+		<h3>Multi Language</h3>
 		<form>
 			<p>
 				<select name="lang">
 					<option value="en">English</option>
 					<option value="zh_CN">简体中文</option>
 					<option value="zh_TW">繁體中文</option>
+					<option value="ar">Arabic</option>
 				</select>
 			</p>
 			<textarea name="content" style="width:800px;height:200px;"></textarea>
