--- a/test/main.html
+++ b/test/main.html
@@ -1,5 +1,4 @@
-<!-- <!doctype html> -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -60,157 +59,8 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<p><textarea name="content1" cols="100" rows="20" style="width:800px;height:10px;">
-2<a href="/kindeditor/trunk/test/showitem.php?id=94b6a10a-e65e-11e0-9955-f46d04144a99"></a><span style="font-family:宋体;"><span style="font-size:18px;font-family:KaiTi_GB2312;">）在控制体的左右边界处，两个点涡诱导的速度带来的左右相互抵消；尤其在下游边界处的地方由于速度还是等于来<a href="/kindeditor/trunk/test/showitem.php?id=2c5eaf1e-b26d-11e0-b298-f46d04144a99">流速</a>度，因此根据动量定理物体不会受到<a href="/kindeditor/trunk/test/showitem.php?id=94b6a10a-e65e-11e0-9955-f46d04144a99">阻力</a>。</span><span style="font-size:18px;font-family:KaiTi_GB2312;"></span><span style="font-size:18px;font-family:KaiTi_GB2312;"></span></span> 
-<p><br /></p>
-<span style="color:#E56600;"><span style="background-color:#FFE500;">高</span><span style="background-color:#FFE500;">温</span></span><span style="color:#E56600;"><span style="background-color:#FFE500;">气</span><span style="background-color:#FFE500;"><u><em><strong>体效</strong></em></u></span></span><span style="background-color:#FFE500;">应</span>
-<div style="display:inline-block;"></div>123<div></div><div></div>
-<p style="text-align:left;text-indent:24pt;">
-	<span style="font-size:12pt;font-family:仿宋_GB2312;color:#E56600;">三个基</span><span style="font-family:仿宋_GB2312;font-size:16px;"><span style="color:#E56600;">本</span><span style="color:#E56600;">关系式</span></span> 
-</p>
-bbbbbbbbbbbbbbb
-<script>
-	// alert(1);
-</script>
-<table style="width:90%;" cellspacing="0" cellpadding="2">
-	<tbody>
-		<tr>
-			<td>
-				1
-			</td>
-			<td>
-				2
-			</td>
-			<td>
-				3
-			</td>
-			<td>
-				4
-			</td>
-		</tr>
-		<tr>
-			<td rowspan="2">
-				1
-			</td>
-			<td>
-				2
-			</td>
-			<td>
-				3
-			</td>
-			<td>
-				4
-			</td>
-		</tr>
-		<tr>
-			<td>
-				2
-			</td>
-			<td>
-				3
-			</td>
-			<td>
-				4
-			</td>
-		</tr>
-	</tbody>
-</table>
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-<table style="width:90%;" cellspacing="0" cellpadding="2">
-	<tbody>
-		<tr>
-			<td>
-				1
-			</td>
-			<td>
-				2
-			</td>
-			<td>
-				3
-			</td>
-			<td>
-				4
-			</td>
-		</tr>
-		<tr>
-			<td rowspan="2">
-				a
-			</td>
-			<td colspan="2" rowspan="2">
-				b
-			</td>
-			<td rowspan="2">
-				d
-			</td>
-		</tr>
-		<tr>
-		</tr>
-		<tr>
-			<td>
-				1
-			</td>
-			<td>
-				2
-			</td>
-			<td>
-				3
-			</td>
-			<td>
-				4
-			</td>
-		</tr>
-	</tbody>
-</table>
-<style>
-	table {
-		border: 1px solid #000;
-	}
-</style>
-<pre>
-	123
-	456
-</pre>
-<br />
-<table style="width:90%;" border="1" bordercolor="#000000" cellpadding="2" cellspacing="0">
-	<tbody>
-		<tr>
-			<td>
-				a
-			</td>
-			<td colspan="2" rowspan="2">
-				b
-			</td>
-			<td>
-				d
-			</td>
-		</tr>
-		<tr>
-			<td>
-				e
-			</td>
-			<td>
-				h
-			</td>
-		</tr>
-		<tr>
-			<td>
-				1
-			</td>
-			<td>
-				2
-			</td>
-			<td>
-				3
-			</td>
-			<td>
-				4
-			</td>
-		</tr>
-	</tbody>
-</table>
-		<img src="data/logo_180_30.gif" onclick="javascript:alert(2);" />
-		测试内容1<div><a href="#">测试内容1</a><br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1测试内容1</div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div></div>
-		测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1测试内容1</div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div>
-			</textarea></p>
+<a target="_blank" href="http://aaa"><img src="/kindeditor/trunk/plugins/emoticons/images/0.gif" alt="" border="0" /></a><a target="_blank" href="http://bbbb"><img style="width:24px;height:24px;" src="/kindeditor/trunk/plugins/emoticons/images/0.gif" alt="" border="0" /></a>
+</textarea></p>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><p>
 	Think Defferent<img src="/ke4/attached/1_192040_1.jpg" width="510" height="340" align="right" alt="" /> 
