--- a/test/main.html
+++ b/test/main.html
@@ -62,9 +62,7 @@
 <a target="_blank" href="http://aaa"><img src="/kindeditor/trunk/plugins/emoticons/images/0.gif" alt="" border="0" /></a><a target="_blank" href="http://bbbb"><img style="width:24px;height:24px;" src="/kindeditor/trunk/plugins/emoticons/images/0.gif" alt="" border="0" /></a>
 </textarea></p>
 			<br />
-			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><p>
-	Think Defferent<img src="/ke4/attached/1_192040_1.jpg" width="510" height="340" align="right" alt="" /> 
-</p>
+			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><img border="0" alt="" src="http://static.pinju.com/kindeditor/plugins/emoticons/images/1.gif" /><a href="bbbb" target="_blank"><img border="0" alt="" src="http://static.pinju.com/kindeditor/plugins/emoticons/images/0.gif" /></a>
 </textarea>
 			<br />
 			<select id="uploadFile">
