--- a/test/html.html
+++ b/test/html.html
@@ -29,7 +29,7 @@
 			<input type="hidden" id="test08" name="test08" value="ftp://kindsoft.net/xxx.zip" style="width:100%" />
 
 			<div id="test11"><span style="color:#FF0000;"><strong>test</strong></span></div>
-			<div id="test12">123<div style="color:#FF0000;background-color:#00FF00;font-size:18px;font-weight:bold;" class="spanclass">test</div>123</div>
+			<div id="test12">123<div class="spanclass" style="color:#FF0000;background-color:#00FF00;font-size:18px;font-weight:bold;">test</div>123</div>
 			<div id="test13"><input type="checkbox" id="chk" value=1 checked="checked" /> <label for="chk"><strong>checkbox</strong></label></div>
 			<div id="test14"><img src="../plugins/emoticons/images/0.gif" /> test</div>
 			<div id="test15"><img src="http://www.kindsoft.net/images/logo_180_30.gif" /> test</div>
