--- a/test/main.html
+++ b/test/main.html
@@ -59,7 +59,7 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<p><textarea name="content1" cols="100" rows="20" style="width:800px;height:10px;">
-<a target="_blank" href="http://aaa"><img src="/kindeditor/trunk/plugins/emoticons/images/0.gif" alt="" border="0" /></a><a target="_blank" href="http://bbbb"><img style="width:24px;height:24px;" src="/kindeditor/trunk/plugins/emoticons/images/0.gif" alt="" border="0" /></a>
+<a target="_blank" href="http://aaa"><img src="http://drmcmm.baidu.com/media/id=n1mdrH0zrHT&gp=402&time=nHnkrHfYPjRvrf.jpg" alt="" border="0" /></a><a target="_blank" href="http://bbbb"><img style="width:24px;height:24px;" src="/kindeditor/trunk/plugins/emoticons/images/0.gif" alt="" border="0" /></a>
 </textarea></p>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><img border="0" alt="" src="http://static.pinju.com/kindeditor/plugins/emoticons/images/1.gif" /><a href="bbbb" target="_blank"><img border="0" alt="" src="http://static.pinju.com/kindeditor/plugins/emoticons/images/0.gif" /></a>
