[trunk] add insertfile demo

--- a/examples/index.html
+++ b/examples/index.html
@@ -52,6 +52,7 @@
 			<li><a href="colorpicker.html" target="_blank">colorpicker.html</a> (取色器)</li>
 			<li><a href="file-manager.html" target="_blank">file-manager.html</a> (浏览服务器)</li>
 			<li><a href="image-dialog.html" target="_blank">image-dialog.html</a> (上传图片弹出框)</li>
+			<li><a href="file-dialog.html" target="_blank">file-dialog.html</a> (上传文件弹出框)</li>
 		</ol>
 	</body>
 </html>
