--- a/test/node.html
+++ b/test/node.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>KindEditor Unittest</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
 		<script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script>
 		<script src="../lib/qunit/qunit.js"></script>
