[trunk] bugfix: issue #296

--- a/test/main.html
+++ b/test/main.html
@@ -114,6 +114,7 @@
 					designMode : true,
 					allowFileManager : true,
 					fullscreenMode : false,
+					pasteType : 1,
 					//afterTab : function() {
 						//editor2.focus();
 					//},
