[trunk] modified test file

--- a/test/main.html
+++ b/test/main.html
@@ -59,10 +59,12 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<p><textarea name="content1" cols="100" rows="20" style="width:800px;height:10px;">
-<p>
-	<span style="font-size:32px;">123</span>
-</p>
-<a target="_blank" href="http://aaa"><img src="http://drmcmm.baidu.com/media/id=n1mdrH0zrHT&gp=402&time=nHnkrHfYPjRvrf.jpg" alt="" border="0" /></a><a target="_blank" href="http://bbbb"><img style="width:24px;height:24px;" src="/kindeditor/trunk/plugins/emoticons/images/0.gif" alt="" border="0" /></a>
+<h1>
+	如有什么<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;前来来看看<br />
+&nbsp;我们一直用心在做<br />
+&nbsp;&nbsp; 如有什么问题可以联系我们13312222
+</h1>
 </textarea></p>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><img border="0" alt="" src="http://static.pinju.com/kindeditor/plugins/emoticons/images/1.gif" /><a href="bbbb" target="_blank"><img border="0" alt="" src="http://static.pinju.com/kindeditor/plugins/emoticons/images/0.gif" /></a>
