--- a/test/main.html
+++ b/test/main.html
@@ -113,6 +113,7 @@
 					urlType : 'absolute',
 					themeType : 'simple',
 					allowImageUpload : true,
+					allowFileUpload : false,
 					designMode : true,
 					allowFileManager : true,
 					fullscreenMode : false,
