[trunk] fix issue #315

--- a/test/main.html
+++ b/test/main.html
@@ -58,6 +58,9 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<p><textarea name="content1" cols="100" rows="20" style="width:800px;height:10px;">
+<div><p>文字</p></div>
+<div>文字</div>
+<p><img src="http://www.kindsoft.net/images/logo.png" /></p>
 <h1>
 	如有什么<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;前来来看看<br />
@@ -66,8 +69,7 @@
 </h1>
 </textarea></p>
 			<br />
-			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"><img border="0" alt="" src="http://static.pinju.com/kindeditor/plugins/emoticons/images/1.gif" /><a href="bbbb" target="_blank"><img border="0" alt="" src="http://static.pinju.com/kindeditor/plugins/emoticons/images/0.gif" /></a>
-</textarea>
+			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"></textarea>
 			<br />
 			<select id="uploadFile">
 				<option value="">附件列表</option>
