[trunk] bugfix: issue #310

--- a/test/main.html
+++ b/test/main.html
@@ -106,7 +106,7 @@
 		<script>
 			KindEditor.DEBUG = true;
 			//KindEditor.options.filterMode = true;
-			//document.domain = 'kindsoft.net';
+			//document.domain = 'domain.com';
 			KindEditor.basePath = '../';
 			KindEditor.ready(function(K) {
 				var editor1 = K.create('textarea[name=content1]', {
