--- a/test/dialog.html
+++ b/test/dialog.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>KindEditor Dialog Test</title>
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
-		<script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script>
+		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
 		<script src="../lib/jquery.js"></script>
 		<link rel="stylesheet" href="../themes/default/default.css" />
@@ -73,6 +73,7 @@
 					}
 				});
 			});
+			K('#create1').click();
 		</script>
 	</body>
 </html>
