--- a/test/frame.html
+++ b/test/frame.html
@@ -1,4 +1,3 @@
 <frameset frameborder="no" border="0" framespacing="0">
-    <frame src="http://test.domain.com/kindeditor/trunk/test/main.html" />
+    <frame src="http://www.kindsoft.net/ke4/examples/default.html" />
 </frameset>
-
