--- a/test/main.html
+++ b/test/main.html
@@ -58,15 +58,18 @@
 		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<p><textarea name="content1" cols="100" rows="20" style="width:800px;height:10px;">
-<div><p>文字</p></div>
-<div>文字</div>
-<p><img src="http://www.kindsoft.net/images/logo.png" /></p>
-<h1>
-	如有什么<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;前来来看看<br />
-&nbsp;我们一直用心在做<br />
-&nbsp;&nbsp; 如有什么问题可以联系我们13312222
-</h1>
+<p align="center">
+        sadf asdf
+</p>
+<p align="center">
+         asdf asdf asdf
+</p>
+<p align="center">
+        <img style="margin-right:10px;" height="100" width="100" /> 
+</p>
+<p align="center">
+        asd ad fasdf
+</p>
 </textarea></p>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"></textarea>
