--- a/test/frame.html
+++ b/test/frame.html
@@ -1,3 +1,3 @@
 <frameset frameborder="no" border="0" framespacing="0">
-    <frame src="http://www.kindsoft.net/ke4/examples/default.html" />
+    <frame src="main.html" />
 </frameset>
