--- a/examples/index.html
+++ b/examples/index.html
@@ -43,6 +43,7 @@
 		<ol>
 			<li><a href="jquery.html" target="_blank">jquery.html</a> (jQuery)</li>
 			<li><a href="mootools.html" target="_blank">mootools.html</a> (MooTools)</li>
+			<li><a href="jquery-ui.html" target="_blank">jquery-ui.html</a> (jQuery UI)</li>
 		</ol>
 		<h3>单独调用组件</h3>
 		<ol>
