--- a/test/main.html
+++ b/test/main.html
@@ -5,7 +5,7 @@
 		<title>KindEditor Main Test</title>
 		<!-- <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" /> -->
 		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
-		<link rel="stylesheet" href="../themes/default/default.css" />
+		<link rel="stylesheet" href="../themes/default/default.css?t=20120318.css" />
 		<link rel="stylesheet" href="../themes/simple/simple.css" />
 		<style>
 			.selected {
