improve dialog style

--- a/test/main.html
+++ b/test/main.html
@@ -19,7 +19,6 @@
 		</style>
 		<script src="../src/core.js"></script>
 		<script src="../src/config.js"></script>
-		<script src="../src/ajax.js"></script>
 		<script src="../src/event.js"></script>
 		<script src="../src/html.js"></script>
 		<script src="../src/selector.js"></script>
@@ -34,6 +33,7 @@
 		<script src="../src/uploadbutton.js"></script>
 		<script src="../src/dialog.js"></script>
 		<script src="../src/tabs.js"></script>
+		<script src="../src/ajax.js"></script>
 		<script src="../src/main.js"></script>
 		<script src="../lang/zh_CN.js"></script>
 		<script src="../lang/en.js"></script>
@@ -57,20 +57,7 @@
 		<tr>
 		<td align="center">
 		<form method="post" action="../php/demo.php">
-			<p><textarea name="content1" cols="100" rows="20" style="width:800px;height:10px;">
-<p align="center">
-        sadf asdf
-</p>
-<p align="center">
-         asdf asdf asdf
-</p>
-<p align="center">
-        <img style="margin-right:10px;" height="100" width="100" /> 
-</p>
-<p align="center">
-        asd ad fasdf
-</p>
-</textarea></p>
+			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;"></textarea>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"></textarea>
 			<br />
