--- a/test/node.html
+++ b/test/node.html
@@ -5,7 +5,7 @@
 		<title>KindEditor Unittest</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 		<link rel="stylesheet" href="../lib/qunit/qunit.css" />
-		<script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script>
+		<!-- <script src="../lib/firebug-lite/build/firebug-lite.js#startOpened"></script> -->
 		<script src="../lib/qunit/qunit.js"></script>
 		<script src="../lib/jquery.js"></script>
 		<!-- include src files -->
