Fixed issue #323 in googlecode

--- a/test/main.html
+++ b/test/main.html
@@ -109,6 +109,7 @@
 					designMode : true,
 					allowFileManager : true,
 					fullscreenMode : false,
+					newlineTag : 'p',
 					pasteType : 2,
 					//afterTab : function() {
 						//editor2.focus();
