Fixed issue #324 in googlecode: noscript bug

--- a/test/editor.html
+++ b/test/editor.html
@@ -50,7 +50,9 @@
 		<br />
 		<br />
 		<textarea id="content1" name="content1" style="width:90%;height:250px;visibility:hidden;"></textarea>
-
+		<br />
+		<textarea id="content2" name="content2" style="width:90%;height:250px;visibility:hidden;"></textarea>
+		<br />
 		<!-- include test files -->
 		<script src="editor.js"></script>
 	</body>
