--- a/test/main.html
+++ b/test/main.html
@@ -105,7 +105,7 @@
 					urlType : 'absolute',
 					themeType : 'simple',
 					allowImageUpload : true,
-					allowFileUpload : false,
+					allowFileUpload : true,
 					designMode : true,
 					allowFileManager : true,
 					fullscreenMode : false,
