add fullscreenShortcut option

--- a/test/main.html
+++ b/test/main.html
@@ -110,6 +110,7 @@
 					allowFileManager : true,
 					fullscreenMode : false,
 					formatUploadUrl : false,
+					fullscreenShortcut : false,
 					newlineTag : 'p',
 					pasteType : 2,
 					//afterTab : function() {
