--- a/examples/index.html
+++ b/examples/index.html
@@ -37,6 +37,7 @@
 			<li><a href="url-type.html" target="_blank">url-type.html</a> (URL设置)</li>
 			<li><a href="paste-type.html" target="_blank">paste-type.html</a> (粘贴设置)</li>
 			<li><a href="custom-theme.html" target="_blank">custom-theme.html</a> (自定义风格)</li>
+			<li><a href="qqstyle.html" target="_blank">qqstyle.html</a> (自定义风格 仿QQ邮箱)</li>
 			<li><a href="custom-plugin.html" target="_blank">custom-plugin.html</a> (自定义插件)</li>
 		</ol>
 		<h3>使用其它类库</h3>
