--- a/test/main.html
+++ b/test/main.html
@@ -57,7 +57,7 @@
 		<tr>
 		<td align="center">
 		<form method="post" action="../php/demo.php">
-			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;"><a href="index.php" id="logo" title="返回首页"><img src="images/logo.png" width="200" height="34" alt="KindEditor"></a></textarea>
+			<textarea name="content1" cols="100" rows="20" style="width:100%;height:10px;"></textarea>
 			<br />
 			<textarea name="content2" cols="100" rows="20" style="width:700px;height:200px;"></textarea>
 			<br />
