Add showLocal and showRemote options for plugin.imageDialog()

--- a/examples/image-dialog.html
+++ b/examples/image-dialog.html
@@ -11,12 +11,36 @@
 				var editor = K.editor({
 					allowFileManager : true
 				});
-				K('#image').click(function() {
+				K('#image1').click(function() {
 					editor.loadPlugin('image', function() {
 						editor.plugin.imageDialog({
-							imageUrl : K('#url').val(),
+							imageUrl : K('#url1').val(),
 							clickFn : function(url, title, width, height, border, align) {
-								K('#url').val(url);
+								K('#url1').val(url);
+								editor.hideDialog();
+							}
+						});
+					});
+				});
+				K('#image2').click(function() {
+					editor.loadPlugin('image', function() {
+						editor.plugin.imageDialog({
+							showLocal : false,
+							imageUrl : K('#url2').val(),
+							clickFn : function(url, title, width, height, border, align) {
+								K('#url2').val(url);
+								editor.hideDialog();
+							}
+						});
+					});
+				});
+				K('#image3').click(function() {
+					editor.loadPlugin('image', function() {
+						editor.plugin.imageDialog({
+							showRemote : false,
+							imageUrl : K('#url3').val(),
+							clickFn : function(url, title, width, height, border, align) {
+								K('#url3').val(url);
 								editor.hideDialog();
 							}
 						});
@@ -26,6 +50,8 @@
 		</script>
 	</head>
 	<body>
-		<input type="text" id="url" value="" /> <input type="button" id="image" value="选择图片" />
+		<p><input type="text" id="url1" value="" /> <input type="button" id="image1" value="选择图片" />（网络图片 + 本地上传）</p>
+		<p><input type="text" id="url2" value="" /> <input type="button" id="image2" value="选择图片" />（网络图片）</p>
+		<p><input type="text" id="url3" value="" /> <input type="button" id="image3" value="选择图片" />（本地上传）</p>
 	</body>
 </html>
