--- a/test/html.html
+++ b/test/html.html
@@ -39,6 +39,7 @@
 			<div id="test19"><FONT size=7>ddd</FONT></div>
 			<div id="test20"><FONT color=#ff0000>ddd</FONT></div>
 			<div id="test21"><FONT style="BACKGROUND-COLOR: #d8d8d8" face="Arial Black" color=#ff0000 size=7>ddd</FONT></div>
+			<div id="test22">&copy;</div>
 		</div>
 
 		<!-- include test files -->
