--- a/test/main.html
+++ b/test/main.html
@@ -95,7 +95,7 @@
 		</form>
 		<script>
 			KindEditor.DEBUG = true;
-			//KindEditor.options.filterMode = true;
+			KindEditor.options.filterMode = false;
 			//document.domain = 'domain.com';
 			KindEditor.basePath = '../';
 			KindEditor.ready(function(K) {
