--- a/examples/filter-mode.html
+++ b/examples/filter-mode.html
@@ -16,17 +16,17 @@
 		<script>
 			KindEditor.ready(function(K) {
 				K.create('textarea[name="content"]', {
-					filterMode : true
+					filterMode : false
 				});
 			});
 		</script>
 	</head>
 	<body>
-		<h3>HTML过滤</h3>
+		<h3>关闭HTML过滤</h3>
 		<form>
 			<textarea name="content" style="width:800px;height:200px;"></textarea>
 			<p>
-				默认根据KindEditor.options.htmlTags过滤HTML标签，也可以通过参数自定义htmlTags。
+				KindEditor 默认采用白名单过滤方式，可用 htmlTags 参数定义要保留的标签和属性。当然也可以用 filterMode 参数关闭过滤模式，保留所有标签。
 			</p>
 		</form>
 	</body>
