--- a/test/main.html
+++ b/test/main.html
@@ -125,6 +125,7 @@
 			<br />
 			HTML计数：<span id="J_count1"></span>
 			<br />
+			<iframe src="http://test.domain.com/github-kindsoft/kindeditor/test/leak.html"></iframe>
 			<textarea id="insertHtml" style="width:90%;"><!-- comment test --><strong>abcd</strong></textarea>
 			<br />
 			<input type="button" id="create1" value="Create #1" />
